Bug 286955. Force the entire subtree of widgets to redraw when we scroll a view that doesn't have an associated scrolling widget. r+sr=bzbarsky,a=shaver